test/end-to-end/compile-errors/extern-warnings.crow
main void()
	()

f void() bare, c extern

f void() unsafe, c extern

f void() summon, c extern

f void() pure
	()
